--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^17.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "flat": "^6.0.1",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.16.4",
