--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "flat": "^6.0.1",
     "http-errors": "~1.6.3",
+    "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "mongoose": "^8.16.4",
     "morgan": "~1.9.1"
